--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+svxlink (15.11+20171204.bdf70af5.github) UNRELEASED; urgency=medium
+
+  * Pulled new upstream master in expectation of next release
+  * Deleted CC0
+  * Bumped Standards-Version: 4.1.2
+  * Added .gitignore file
+
+ -- Felix Lechner <felix.lechner@lease-up.com>  Mon, 04 Dec 2017 21:40:15 -0800
+
 svxlink (15.11-2.1) unstable; urgency=medium
 
   * Non-maintainer upload.
