--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-svxlink (15.11+20171204~github.bdf70af5) UNRELEASED; urgency=medium
+svxlink (15.11+20171204~github.bdf70af5-1) UNRELEASED; urgency=medium
 
   * Pulled new upstream master in expectation of next release
   * Deleted CC0
@@ -6,7 +6,7 @@ svxlink (15.11+20171204~github.bdf70af5) UNRELEASED; urgency=medium
   * Added .gitignore file
   * Updated maintainer email address
 
- -- Felix Lechner <felix.lechner@lease-up.com>  Mon, 04 Dec 2017 22:31:34 -0800
+ -- Felix Lechner <felix.lechner@lease-up.com>  Tue, 05 Dec 2017 08:07:39 -0800
 
 svxlink (15.11-2.1) unstable; urgency=medium
 
