--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,9 @@ svxlink (15.11+20171204~github.bdf70af5-1) UNRELEASED; urgency=medium
   * Updated maintainer email address
   * Removed Build-Depends: tcl-dev, qttools5-dev-tools
   * Changed Build-Depends: libgcrypt20-dev to libgcrypt-dev
+  * Fixed some spelling errors
 
- -- Felix Lechner <felix.lechner@lease-up.com>  Tue, 05 Dec 2017 08:24:03 -0800
+ -- Felix Lechner <felix.lechner@lease-up.com>  Tue, 05 Dec 2017 09:46:08 -0800
 
 svxlink (15.11-2.1) unstable; urgency=medium
 
