--- a/debian/changelog
+++ b/debian/changelog
@@ -8,8 +8,9 @@ svxlink (15.11+20171204~github.bdf70af5-1) UNRELEASED; urgency=medium
   * Removed Build-Depends: tcl-dev, qttools5-dev-tools
   * Changed Build-Depends: libgcrypt20-dev to libgcrypt-dev
   * Fixed some spelling errors
+  * Bumped library minor version in lintian-overrides
 
- -- Felix Lechner <felix.lechner@lease-up.com>  Tue, 05 Dec 2017 09:46:08 -0800
+ -- Felix Lechner <felix.lechner@lease-up.com>  Tue, 05 Dec 2017 10:16:40 -0800
 
 svxlink (15.11-2.1) unstable; urgency=medium
 
