--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,9 @@ svxlink (15.11+20171204~github.bdf70af5-1) UNRELEASED; urgency=medium
   * Changed Build-Depends: libgcrypt20-dev to libgcrypt-dev
   * Fixed some spelling errors
   * Bumped library minor version in lintian-overrides
+  * Placed shared libraries in Section: libs
 
- -- Felix Lechner <felix.lechner@lease-up.com>  Tue, 05 Dec 2017 10:16:40 -0800
+ -- Felix Lechner <felix.lechner@lease-up.com>  Tue, 05 Dec 2017 10:33:38 -0800
 
 svxlink (15.11-2.1) unstable; urgency=medium
 
