--- a/debian/changelog
+++ b/debian/changelog
@@ -10,8 +10,11 @@ svxlink (15.11+20171204~github.bdf70af5-1) UNRELEASED; urgency=medium
   * Fixed some spelling errors
   * Bumped library minor version in lintian-overrides
   * Placed shared libraries in Section: libs
+  * Manually create icon directories in rules (for Raspbian Jessie)
+  * Ship svxreflector in new binary package
+  * Ship GPIO auxiliaries with svxlink-server
 
- -- Felix Lechner <felix.lechner@lease-up.com>  Tue, 05 Dec 2017 10:33:38 -0800
+ -- Felix Lechner <felix.lechner@lease-up.com>  Tue, 05 Dec 2017 13:56:08 -0800
 
 svxlink (15.11-2.1) unstable; urgency=medium
 
