--- a/debian/changelog
+++ b/debian/changelog
@@ -14,8 +14,9 @@ svxlink (15.11+20171204~github.bdf70af5-1) UNRELEASED; urgency=medium
   * Ship svxreflector in new binary package
   * Ship GPIO auxiliaries in separate, architecture independent package
   * Changed package descriptions in control
+  * Switched to systemd scripts provided by upstream
 
- -- Felix Lechner <felix.lechner@lease-up.com>  Tue, 05 Dec 2017 14:40:11 -0800
+ -- Felix Lechner <felix.lechner@lease-up.com>  Tue, 05 Dec 2017 15:00:40 -0800
 
 svxlink (15.11-2.1) unstable; urgency=medium
 
