--- a/debian/changelog
+++ b/debian/changelog
@@ -18,8 +18,9 @@ svxlink (15.11+20171204~github.bdf70af5-1) UNRELEASED; urgency=medium
   * Pulled systemd files for svxreflector from Richard Neese
   * Updated copyright info for Richard Neese
   * Moved CC0 license nearer the original icons
+  * Removed obsolete syslog.target from all systemd service files
 
- -- Felix Lechner <felix.lechner@lease-up.com>  Tue, 05 Dec 2017 15:40:41 -0800
+ -- Felix Lechner <felix.lechner@lease-up.com>  Tue, 05 Dec 2017 15:43:31 -0800
 
 svxlink (15.11-2.1) unstable; urgency=medium
 
