--- a/debian/changelog
+++ b/debian/changelog
@@ -22,8 +22,9 @@ svxlink (15.11+20171204~github.bdf70af5-1) UNRELEASED; urgency=medium
   * Provided basic init.d file for svxreflector
   * Updated copyright info
   * Added documentation keys for systemd service files
+  * Split calibration tools into a separate binary package
 
- -- Felix Lechner <felix.lechner@lease-up.com>  Tue, 05 Dec 2017 16:21:33 -0800
+ -- Felix Lechner <felix.lechner@lease-up.com>  Wed, 06 Dec 2017 04:37:56 -0800
 
 svxlink (15.11-2.1) unstable; urgency=medium
 
